--- a/src/main/resources/templates/orderForm.html
+++ b/src/main/resources/templates/orderForm.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <form method="POST" th:action="@{/orders}"  th:object="${shawaOrder}">
+  <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
   <h1>Order your shawarma creations!</h1>
   <img th:src="@{/images/veganshawarmarecipe(267).jpg}"/>
   <h3>Your shawarmas in this order:</h3>
